--- a/docs/de-de/modules/auftraege/pages/buchhaltung.adoc
+++ b/docs/de-de/modules/auftraege/pages/buchhaltung.adoc
@@ -349,7 +349,7 @@ Stelle ein Datum ein, wenn du z.B. nicht länger steuerpflichtig in einem Liefer
 *_Wichtig_*: Bei manueller Eingabe das Jahr vierstellig eintragen, da eine zweistellige Eingabe, z.B. 14 statt 2014, zu Fehlern führt.
 
 | *Nur für digitale Artikel*
-|Aktiviere diese Option, wenn die Steuerkonfiguration nur für digitale Artikel gelten soll. Beachte das Kapitel xref:buchhaltung:auftraege.adoc#600[Umsatzsteuer für digitale Artikel].
+|Aktiviere diese Option, wenn die Steuerkonfiguration nur für digitale Artikel gelten soll. Beachte das Kapitel xref:auftraege:buchhaltung.adoc#600[Umsatzsteuer für digitale Artikel].
 
 |====
 
@@ -603,7 +603,7 @@ Wähle das Datenformat und erstelle beispielsweise einen Export vom Typ *Finanzb
 *_Tipp:_* Für den CSV-Import eine Software verwenden, bei der diese Parameter vor dem Datenimport auswählbar sind.
 
 | *Hersteller-Provisionen*
-| Der Export im CSV-Format enthält die Provisionen, die in den xref:main@manual:artikel:artikel-verwalten.adoc#560[Daten der Hersteller:in] hinterlegt sind.
+| Der Export im CSV-Format enthält die Provisionen, die in den xref:artikel:hersteller.adoc#100[Daten der Hersteller:in] hinterlegt sind.
 
 | *Preisliste*
 | Der Export im CSV-Format enthält Artikeldaten und die dazugehörigen Preise.
