--- a/docs/de-de/modules/auftraege/pages/scheduler.adoc
+++ b/docs/de-de/modules/auftraege/pages/scheduler.adoc
@@ -16,7 +16,7 @@ Im Menü *Einrichtung » Aufträge » Scheduler* konfigurierst du das Abo-Modul 
 [TIP]
 .Nicht für Artikel mit Bestellmerkmalen
 ====
-Das Abo-Modul funktioniert nicht bei Artikeln mit xref:artikel:artikel-verwalten.adoc#480[Bestellmerkmalen].
+Das Abo-Modul funktioniert nicht bei Artikeln mit xref:artikel:personalisierte-artikel.adoc#95[Bestellmerkmalen].
 ====
 
 [#100]
@@ -248,7 +248,7 @@ Scheduler-Aufträge suchen:
 
 | *Mandant (Shop)*
 | Mandanten wählen, um nur Scheduler-Aufträge des ausgewählten Mandanten anzuzeigen. +
-*_Wichtig:_* Variable Benutzern stehen nur Mandanten zur Auswahl, für die sie eine Berechtigung haben. Berechtigungen werden unter xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#90[Einrichtung » Einstellungen » Benutzer » Konten » Tab: Berechtigung] eingestellt.
+*_Wichtig:_* Variable Benutzern stehen nur Mandanten zur Auswahl, für die sie eine Berechtigung haben. Berechtigungen werden unter xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#100[Einrichtung » Einstellungen » Benutzer » Konten » Tab: Berechtigung] eingestellt.
 |====
 
 [#900]
