--- a/docs/de-de/modules/business-entscheidungen/pages/kontakte.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/kontakte.adoc
@@ -15,7 +15,7 @@ plentymarkets berechnet die Kennzahl *Kontakte* nach den <<#200, Dimensionen>> *
 include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
 
 * xref:business-entscheidungen:accounts.adoc#[accounts]
-* xref:business-entscheidungen:accountscontacts.adoc#[accountsContacts]
+* xref:business-entscheidungen:accountcontacts.adoc#[accountsContacts]
 
 include::partial$plentyBI-rohdaten-aktivieren.adoc[]
 
