--- a/docs/de-de/modules/business-entscheidungen/pages/reports-verwalten.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/reports-verwalten.adoc
@@ -93,7 +93,7 @@ Weitere Informationen findest du auf der Unterseite xref:business-entscheidungen
 
 |marketplaceStockMovement
 |Warenbestandsinformationen, die zu Marktplätzen exportiert wurden +
-Weitere Informationen findest du auf der Unterseite xref:business-entscheidungen:marketplacestockmovement.adoc#[marketplaceStockMovement].
+Weitere Informationen findest du auf der Unterseite xref:business-entscheidungen:marketplaceStockMovement.adoc#[marketplaceStockMovement].
 
 |messages
 |Nachrichten +
@@ -101,7 +101,7 @@ Weitere Informationen findest du auf der Unterseite xref:business-entscheidungen
 
 |messageTagRelations
 |Tag-Verknüpfungen von Nachrichten +
-Weitere Informationen findest du auf der Unterseite xref:business-entscheidungen:messagetagrelations.adoc#[messageTagRelations].
+Weitere Informationen findest du auf der Unterseite xref:business-entscheidungen:messageTagRelations.adoc#[messageTagRelations].
 
 |orderDocuments
 |Auftragsdokumente +
@@ -173,7 +173,7 @@ Weitere Informationen findest du auf der Unterseite xref:business-entscheidungen
 
 |variationValidation
 |Artikelvarianten, die zu Marktplätzen exportiert, aber abgelehnt wurden +
-Weitere Informationen findest du auf der Unterseite xref:business-entscheidungen:marketplaceVariationValidation.adoc#[variationValidation].
+Weitere Informationen findest du auf der Unterseite xref:business-entscheidungen:VariationValidation.adoc#[variationValidation].
 
 |====
 
