--- a/docs/de-de/modules/business-entscheidungen/partials/orderitemamounts.adoc
+++ b/docs/de-de/modules/business-entscheidungen/partials/orderitemamounts.adoc
@@ -1,1 +1,1 @@
-* xref:business-entscheidungen:orderItemAmounts.adoc#[orderItemAmounts]
+* xref:business-entscheidungen:orderitemamounts.adoc#[orderItemAmounts]
