--- a/docs/de-de/modules/pos/pages/pos-online-bestellungen.adoc
+++ b/docs/de-de/modules/pos/pages/pos-online-bestellungen.adoc
@@ -116,7 +116,7 @@ Versandprofil für Abholung in der Filiale am Artikel aktivieren:
 [TIP]
 .Versandprofil für mehrere Artikeln aktivieren
 ====
-Du möchtest das Versandprofil für eine größere Anzahl an Artikeln gleichzeitig aktivieren? Dann nutze die xref:artikel:artikel-verwalten.adoc#155[Artikel-Gruppenfunktion].
+Du möchtest das Versandprofil für eine größere Anzahl an Artikeln gleichzeitig aktivieren? Dann nutze die xref:artikel:massenbearbeitung.adoc#100[Artikel-Gruppenfunktion].
 ====
 
 [#700]
