--- a/docs/en-gb/modules/app/pages/app.adoc
+++ b/docs/en-gb/modules/app/pages/app.adoc
@@ -57,7 +57,7 @@ The plentymarkets app includes a wide range of useful functions. Learn all about
 * xref:pos:pos.adoc#[The plentymarkets mobile POS system]
 ** xref:pos:plentymarkets-pos-for-pos-users.adoc#30[Ringing up customers]
 ** xref:pos:integrating-plentymarkets-pos.adoc#2100[Coupons]
-** xref:pos:pos-kassenbenutzer.adoc#173[Cancellations and returns]
+** xref:pos:plentymarkets-pos-for-pos-users.adoc#173[Cancellations and returns]
 ** xref:pos:pos-online-orders.adoc#[Processing online orders (Click & Collect)]
 ** xref:pos:plentymarkets-pos-for-pos-users.adoc#180[Withdrawing or depositing cash into the cash drawer]
 ** xref:pos:plentymarkets-pos-for-pos-users.adoc#210[Creating Z reports and till count reports]
