--- a/docs/en-gb/modules/business-decisions/pages/contacts.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/contacts.adoc
@@ -15,7 +15,7 @@ plentymarkets calculates the key figure *Contacts* based on the <<#200, dimensio
 include::partial$key-figure-requirement-raw-data.adoc[]
 
 * xref:business-decisions:accounts.adoc#[accounts]
-* xref:business-decisions:accountscontacts.adoc#[accountsContacts]
+* xref:business-decisions:accountcontacts.adoc#[accountsContacts]
 
 include::partial$plentyBI-activate-raw-data.adoc[]
 
