--- a/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
+++ b/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
@@ -138,7 +138,7 @@ Option not activated = Variations for which the POS's referrer has not been acti
 
 | *Include active variations only*
 |Select if only active variations should be made available for this POS. Variations are activated in the *Settings* tab of the variation. +
-Option activated = Only variations are available in the POS for which the option xref:item:managing-items.adoc#230[Active] is activated in the *Settings* tab of the variation. +
+Option activated = Only variations are available in the POS for which the option xref:item:manually-create-item.adoc#600[Active] is activated in the *Settings* tab of the variation. +
 Option not activated = Active and inactive variations are available for this POS and can be accessed and sold.
 
 2+^| *Sales warehouse*
