--- a/docs/de-de/modules/auftraege/pages/abonnement.adoc
+++ b/docs/de-de/modules/auftraege/pages/abonnement.adoc
@@ -53,7 +53,7 @@ Diese Aufträge werden dann automatisch in der Auftragsübersicht eingeordnet un
 *_Beachte_*, dass die Aufträge _nicht_ automatisch erzeugt werden und somit manuell angestoßen werden müssen, wenn du diese Option nicht aktivierst.
 
 |[#intable-subscription-default-status]*Standard-Status*
-|Wähle einen Standardstatus, der für Abonnements gelten soll. Dieser Status ist dann für neu angelegte Abonnements vorausgewählt, bleibt aber individuell anpassbar. Zur Verfügung stehen dir alle <<auftraege/auftraege-verwalten/#1220, Status>>, die du in deinem plentymarkets System festgelegt hast.
+|Wähle einen Standardstatus, der für Abonnements gelten soll. Dieser Status ist dann für neu angelegte Abonnements vorausgewählt, bleibt aber individuell anpassbar. Zur Verfügung stehen dir alle xref:auftraege:auftraege-verwalten.adoc#1220[Status], die du in deinem plentymarkets System festgelegt hast.
 
 |[#intable-subscription-default-interval]*Standard-Intervall*
 |Wähle optional einen Zeitabstand, in dem die Artikel eines Abonnements verschickt werden sollen, als Standard aus. Dieses Intervall ist dann für neu angelegte Abonnements vorausgewählt, bleibt aber individuell anpassbar.
@@ -412,7 +412,7 @@ Artikel zum Warenkorb hinzufügen:
 In einer Dropdown-Liste werden dir alle für dieses Abonnement ermittelten Verkaufspreise angezeigt. Du kannst einen der angezeigten Preise wählen, dieser wird dann als Grundlage für die weiteren Berechnungen genommen. Enthält der Preis einen Rabatt, wird dies hinter dem Preisnamen und dem Betrag angezeigt. Die optionalen Spalten *Kundenklassenrabatt* und *Kategorierabatt* zeigen den Prozentsatz des angewendeten Rabatts an. +
 Konnte kein gültiger Verkaufspreis ermittelt werden, wird *Kein gültiger Verkaufspreis* in der Dropdown-Liste angezeigt. Du kannst den Artikel dennoch in den Warenkorb legen. Im Warenkorb kannst du den Preis manuell anpassen. Das Abonnement lässt sich aber auch ohne gültige Verkaufspreise anlegen, sollte dies gewünscht sein.
 
-Eine manuelle Anpassung des Preises kannst du im Warenkorb vornehmen. Weitere Informationen dazu findest du im Kapitel xref:auftraege:abonnement.adoc#225[Warenkorb: Preisauswahl].
+Eine manuelle Anpassung des Preises kannst du im Warenkorb vornehmen. Weitere Informationen dazu findest du im Kapitel xref:auftraege:abonnement.adoc#425[Warenkorb: Preisauswahl].
 ====
 
 [.collapseBox]
