--- a/docs/de-de/modules/auftraege/pages/dokumentenarchiv.adoc
+++ b/docs/de-de/modules/auftraege/pages/dokumentenarchiv.adoc
@@ -52,7 +52,7 @@ Folgende Dokumenttypen sind im Dokumentenarchiv verfügbar:
 * xref:auftraege:abhollieferung-erzeugen.adoc#[Abhollieferung]
 * xref:payment:bankdaten-verwalten.adoc#70[EBICS-INI-Brief]
 * xref:pos:pos-einrichten.adoc#400[Kassenjournal]
-* <<warenwirtschaft/nachbestellungen-verwalten/nachbestellungen-vornehmen#140#, Nachbestellung>>
+* xref:warenwirtschaft:nachbestellungen-vornehmen.adoc#140[Nachbestellung]
 * xref:payment:bankdaten-verwalten.adoc#220[SEPA-Lastschriftmandat]
 * *Upload*
 * xref:warenwirtschaft:wareneingaenge-verwalten.adoc#[Wareneingangsbeleg (Lagerschein)]
