--- a/docs/de-de/modules/auftraege/pages/lager-pickliste.adoc
+++ b/docs/de-de/modules/auftraege/pages/lager-pickliste.adoc
@@ -58,7 +58,7 @@ Artikeldaten darstellen:
 
 | *Freitext*
 |Das entsprechende *Freitextfeld 1-20* aus der Dropdown-Liste wählen. +
-Freitextfelder zuerst im Menü *xref:artikel:artikel-verwalten.adoc#70[Einrichtung » Artikel » Freitextfelder]* anlegen. Danach die angelegten Freitextfelder mit den entsprechenden Artikeln verknüpfen und die Werte für die Felder eintragen. Dies erfolgt im Menü xref:artikel:artikel-verwalten.adoc#75[*Artikel » Artikel bearbeiten » Tab: Felder*].
+Freitextfelder zuerst im Menü *xref:artikel:artikel-verwalten.adoc#70[Einrichtung » Artikel » Freitextfelder]* anlegen. Danach die angelegten Freitextfelder mit den entsprechenden Artikeln verknüpfen und die Werte für die Felder eintragen. Dies erfolgt im Menü xref:artikel:felder.adoc#[*Artikel » Artikel bearbeiten » Tab: Felder*].
 
 | *Artikelbeschreibung*
 |Festlegen, welche Informationen die Artikelbeschreibung in der Lager-Pickliste enthalten soll. Der *Artikelname* wird immer mit diesem Feld angezeigt. Zusätzlich können noch weitere Angaben ausgewählt werden, z.B. *Artikel-ID*, *Externe Artikel-ID*, *Artikelnummer* und *EAN*. Sollen Parameter in der Lager-Pickliste nicht angezeigt werden, Häkchen jeweils entfernen. Die Auswahl gilt auch für Varianten.
