--- a/docs/en-gb/modules/business-decisions/partials/shipping-provider.adoc
+++ b/docs/en-gb/modules/business-decisions/partials/shipping-provider.adoc
@@ -1,5 +1,5 @@
 === Shipping provider
 
 Filters the selected key figure and dimension additionally by one or several shipping service providers.
-For this filter you can select the xref:fulfilment:fulfilment.adoc[Shipping service providers] that have been set up in your system.
+For this filter you can select the xref:fulfilment:fulfilment.adoc#[Shipping service providers] that have been set up in your system.
 Select one of the following comparison operators and then the desired shipping service providers (material:check_box[role=skyBlue]).
