--- a/docs/en-gb/modules/fulfilment/pages/preparing-the-shipment.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/preparing-the-shipment.adoc
@@ -431,7 +431,7 @@ This function allows you to easily and quickly assign the shipping profile to ne
 *_Important:_* Make sure that the shipping service provider offers express delivery. This is required to use the option.
 
 | *Loyalty program*
-|Select one or more loyalty programs. You can use the loyalty programs with xref:markets:ebay-setup.adoc#6600[eBay Plus] or xref:markets:amazon-setup.adoc#4200[Amazon]. +
+|Select one or more loyalty programs. You can use the loyalty programs with xref:markets:ebay-setup.adoc#6600[eBay Plus] or xref:markets:best-practices-amazon-prime.adoc#150[Amazon]. +
 *_Important:_* If you select a loyalty program for a shipping profile, you can only use the shipping profile for the market. It is not possible to use the shipping profile for the online shop. If, for example, the *eBay Plus* option is activated in a shipping profile, the shipping profile is only used for *eBay Plus* orders. Therefore, create an extra shipping profile that you only use for the loyalty program.
 |====
 
