--- a/docs/en-gb/modules/fulfilment/pages/fulfilment.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/fulfilment.adoc
@@ -4,7 +4,7 @@
 :id: BELRROP
 :author: team-fulfillment-payment
 
-In this area, you will find every xref:fulfilment:fulfilment.adoc#100[shipping service provider] and xref:fulfilment:fulfilment.adoc#200[fulfilment service provider] that has an interface to plentymarkets. The settings that you have to carry out, such as setting up a shipping profile including the table of shipping charges, is identical for all service providers. This is the reason why you will first find general settings that apply to all service providers on the xref:fulfilment:preparing-the-shipment.adoc#[Preparing the shipment] page. xref:fulfilment:preparing-the-shipment.adoc#2500[Service provider-specific settings] can be found in the lower part of the page.
+In this area, you will find every shipping service provider and fulfilment service provider that has an interface to plentymarkets. The settings that you have to carry out, such as setting up a shipping profile including the table of shipping charges, is identical for all service providers. This is the reason why you will first find general settings that apply to all service providers on the xref:fulfilment:preparing-the-shipment.adoc#[Preparing the shipment] page. xref:fulfilment:preparing-the-shipment.adoc#2500[Service provider-specific settings] can be found in the lower part of the page.
 
 In the xref:fulfilment:shipping-service-provider-plugins.adoc#[Shipping service provider plugins] area, you find detailed descriptions for the shipping service provider plugins that have been developed by plentymarkets.
 
