--- a/docs/en-gb/modules/orders/pages/scheduler.adoc
+++ b/docs/en-gb/modules/orders/pages/scheduler.adoc
@@ -78,7 +78,7 @@ The scheduler does not take into account the option *Subscription Interval* of t
 
 === Categorizing subscription items
 
-You have different options for integrating subscription items in your stock. It is recommended that you create a xref:item:managing-categories.adoc#[**category**] for subscription items only and link all items desired to this category. Another option is that you create the items again as **xref:item:managing-items.adoc#320[item bundles]** so that they are linked to the main item. This is important for reasons of stock-keeping.
+You have different options for integrating subscription items in your stock. It is recommended that you create a xref:item:categories.adoc#[**category**] for subscription items only and link all items desired to this category. Another option is that you create the items again as **xref:item:managing-items.adoc#320[item bundles]** so that they are linked to the main item. This is important for reasons of stock-keeping.
 
 === Activating the subscription function
 
