--- a/docs/de-de/modules/maerkte/pages/_amazon-mfn-nutzen.adoc
+++ b/docs/de-de/modules/maerkte/pages/_amazon-mfn-nutzen.adoc
@@ -325,7 +325,7 @@ Variantenverfügbarkeit für Amazon Multi-Channel einstellen:
 . Öffne das Menü *Artikel » Artikel bearbeiten*.
 . Öffne den Artikel.
 . Wechsele in das Tab *Multi-Channel*.
-. Nimm die Einstellungen im Bereich *Amazon* vor. Beachte dazu die Erläuterungen in <<artikelverfügbarkeit-amazon>> im Kapitel xref:maerkte:amazon-einrichten.adoc#700[Variantenverfügbarkeit einstellen].
+. Nimm die Einstellungen im Bereich *Amazon* vor. Beachte dazu die Erläuterungen in <<artikelverfügbarkeit-amazon>> im Kapitel xref:maerkte:varianten-vorbereiten.adoc#700[Variantenverfügbarkeit einstellen].
 . Speichere (terra:save[]) die Einstellungen.
 
 [#4000]
