--- a/docs/de-de/modules/maerkte/pages/hood.adoc
+++ b/docs/de-de/modules/maerkte/pages/hood.adoc
@@ -5,6 +5,8 @@
 :id: VB8LKX7
 
 :hood:
+:listings-sales-planner: 1600
+:listings-edit: 2700
 
 Auf dem Marktplatz Hood kannst du deine Produkte als Auktion, Festpreisartikel oder im eigenen Shop einstellen. plentymarkets ermöglicht dir die komplette und integrierte Anbindung an Hood. Erfahre, wie du Artikel einstellst, einen Hood-Shop einrichtest und deine Listings bearbeitest. Käufe werden über dein plentymarkets System abgewickelt.
 
