--- a/docs/de-de/modules/maerkte/pages/ricardo-ch.adoc
+++ b/docs/de-de/modules/maerkte/pages/ricardo-ch.adoc
@@ -4,6 +4,11 @@
 :description: Multi-Channel in plentymarkets: Richte die Schnittstelle zum Marktplatz ricardo.ch in deinem plentymarkets System ein.
 :id: SA24AGT
 
+:ricardo:
+:market: ricardo
+:listings-sales-planner: 1200
+:listings-edit: 2300
+
 plentymarkets ermöglicht dir die komplette und integrierte Anbindung an ricardo.ch – den größten Online-Marktplatz der Schweiz. Erfahre, wie du Artikel einstellst, Verkäufe abrufst und deine Listings bearbeitest. Auch Faktura und Versand erfolgen direkt über plentymarkets.
 
 [#100]
