--- a/docs/de-de/modules/maerkte/partials/amz-einrichtungsmenue.adoc
+++ b/docs/de-de/modules/maerkte/partials/amz-einrichtungsmenue.adoc
@@ -23,7 +23,6 @@ video::317425771[vimeo]
 Der MWS-Autorisierungstoken hat ein Ablaufdatum und muss in der Seller Central wieder aktiviert werden, wenn er abgelaufen ist.
 ====
 
-[#200]
 [#300]
 ==== Amazon-Benutzerkonto einrichten
 
@@ -62,7 +61,7 @@ Konto erstellen:
 | Einstellung | Erläuterung
 
 | *Amazon-Plattform*
-| Eine Plattform muss direkt beim Erstellen gewählt werden und kann hier geändert werden. Wenn du ein europäisches Verkäuferkonto hast, kannst du für jede Plattform, auf der du verkaufen möchtest, eigene Einstellungen vornehmen. Weitere Informationen dazu findest du im Abschnitt <<Konto einrichten, Amazon-Plattform>>.
+| Eine Plattform muss direkt beim Erstellen gewählt werden und kann hier geändert werden. Wenn du ein europäisches Verkäuferkonto hast, kannst du für jede Plattform, auf der du verkaufen möchtest, eigene Einstellungen vornehmen. Weitere Informationen dazu findest du im Abschnitt <<#200, Amazon-Benutzerkonto einrichten>>.
 
 | *Verkäufer-ID*
 | Verkäufer-ID eingeben, wie von Amazon erhalten. Wenn du ein europäisches Verkäuferkonto hast, ist die Verkäufer-ID für jede Plattform gleich.
@@ -304,7 +303,7 @@ Auftragseinstellungen vornehmen:
 | Wählen, welches Amazon FBA-Lager für den Bestandabgleich des Kontos verwendet werden soll. Dieses Lager wird auch für die FBA-Auftragszuordnung des Kontos verwendet, falls kein FBA-Auftrag aufgrund eines nicht eingerichteten Lagers für das Auftragsland zugeordnet werden konnte.
 
 | *Lager für unverkäuflichen Bestand*
-| Wählen, in welches <<#60, Amazon FBA-Lager>> unverkäuflicher Bestand des Kontos gebucht werden soll. Wenn du kein Lager wählst, wird der unverkäufliche Bestand nicht importiert. +
+| Wählen, in welches Amazon FBA-Lager unverkäuflicher Bestand des Kontos gebucht werden soll. Wenn du kein Lager wählst, wird der unverkäufliche Bestand nicht importiert. +
 Der unverkäufliche Bestand ist die Anzahl der Einheiten einer SKU, die sich in Amazon-Logistikzentren befinden und den Zustand "nicht verkaufbar" haben. Im Bericht "Lagerbestand mit Versand durch Amazon" entspricht das der Menge in der Spalte *afn-unsellable-quantity*.
 
 | *Warenausgang*
