--- a/docs/de-de/modules/maerkte/partials/manage-listings.adoc
+++ b/docs/de-de/modules/maerkte/partials/manage-listings.adoc
@@ -605,7 +605,7 @@ Market-Listing erstellen:
 . Speichere (terra:save[]) die Einstellungen. +
 → Das Market-Listing wird erstellt und geöffnet.
 
-Details zu Einstellungen eines Market-Listings findest du im Kapitel <<#listings-edit, Listings bearbeiten>>.
+Details zu Einstellungen eines Market-Listings findest du im Kapitel <<#{listings-edit}, Listings bearbeiten>>.
 //end::add-market-listing[]
 
 [#listings-create-multiple]
@@ -750,7 +750,7 @@ __Bild 1: Symbolleiste eines Market-Listings__
 | Market-Listing mit allen Einstellungen kopieren.
 
 | *Verkaufsplaner*
-| Verkaufsplaner für das Market-Listing einstellen. Im Fenster *Verkaufsplaner aktivieren* wird ein <<#listings-sales-planner, Verkaufsplaner>> gewählt.
+| Verkaufsplaner für das Market-Listing einstellen. Im Fenster *Verkaufsplaner aktivieren* wird ein <<#{listings-sales-planner}, Verkaufsplaner>> gewählt.
 
 | *Starten*
 | Market-Listing starten. Im Fenster *Market-Listing starten* wird ein Start-Zeitpunkt gewählt.
@@ -1172,7 +1172,7 @@ a| *Grundeinstellungen*, *Ja* oder *Nein* wählen. +
 | Aktivieren, um das Listing mit allen Varianten zu listen.
 
 | *Verkaufsplaner*
-| Verkaufsplaner für das Market-Listing einstellen. Im Fenster *Verkaufsplaner aktivieren* wird ein <<#listings-sales-planner, Verkaufsplaner>> gewählt.
+| Verkaufsplaner für das Market-Listing einstellen. Im Fenster *Verkaufsplaner aktivieren* wird ein <<#{listings-sales-planner}, Verkaufsplaner>> gewählt.
 |===
 
 [.instruction]
@@ -1269,7 +1269,7 @@ Market-Listing kopieren:
 . Klicke auf *Kopieren*. +
 → Das Market-Listing wird erstellt und geöffnet.
 
-Details zu den Einstellungen eines Listings findest du im Kapitel <<#listings-edit, Listings bearbeiten>>.
+Details zu den Einstellungen eines Listings findest du im Kapitel <<#{listings-edit}, Listings bearbeiten>>.
 //end::copy-one-listing[]
 
 [#4600]
@@ -1543,7 +1543,7 @@ Listing-Vorlage per Gruppenfunktion erstellen:
 . Aktiviere die zu bearbeitenden Listings.
 . Klicke auf *Gruppenfunktion*. +
 → Das Fenster *Gruppenfunktion* wird geöffnet.
-. Nimm die Einstellungen gemäß <<#gruppenfunktion-stapelverarbeitung>> im Kapitel <<#listings-edit, Listings bearbeiten>> vor.
+. Nimm die Einstellungen gemäß <<#gruppenfunktion-stapelverarbeitung>> im Kapitel <<#{listings-edit}, Listings bearbeiten>> vor.
 . Klicke auf *Neue Vorlage speichern*. +
 → Das Fenster *Name für Vorlage* wird geöffnet.
 . Gib einen Namen für die Vorlage ein.
@@ -1554,7 +1554,7 @@ Listing-Vorlage per Gruppenfunktion erstellen:
 Listing-Vorlage über die Stapelverarbeitung erstellen:
 
 . Öffne das Menü *Listings » Stapelverarbeitung » Listings*.
-. Nimm die Einstellungen gemäß <<#gruppenfunktion-stapelverarbeitung>> im Kapitel <<#listings-edit, Listings bearbeiten>> vor.
+. Nimm die Einstellungen gemäß <<#gruppenfunktion-stapelverarbeitung>> im Kapitel <<#{listings-edit}, Listings bearbeiten>> vor.
 . Klicke auf *Neue Vorlage speichern*. +
 → Das Fenster *Name für Vorlage* wird geöffnet.
 . Gib einen Namen für die Vorlage ein.
