--- a/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
@@ -4,6 +4,11 @@
 :id: DWYPTTK
 :author: team-plenty-channel
 
+:ebay:
+:market: ebay
+:listings-sales-planner: 2700
+:listings-edit: 3800
+
 Mit über 120 Millionen Käufer:innen auf der ganzen Welt bietet eBay hervorragende Absatzmöglichkeiten in einem globalen und stark wachsenden Markt. plentymarkets bietet eine vollständige Anbindung über die eBay-API-Schnittstelle. Du kannst u.a. <<#5100, Listings starten>> und <<#6000, Angebote mit Varianten einstellen>>, <<#7400, Retouren abwickeln>> und <<#7100, Mahnungen versenden>>. Du erfährst ebenfalls, wie du zwischen eBay und plentymarkets <<#10100, Daten abgleichst>>.
 
 [#100]
