--- a/docs/de-de/modules/maerkte/pages/varianten-exportieren-katalog.adoc
+++ b/docs/de-de/modules/maerkte/pages/varianten-exportieren-katalog.adoc
@@ -31,7 +31,7 @@ Kataloge für den Export von Variantendaten an Amazon befinden sich noch in der 
 == Hinweise zu Amazon-Katalogen
 
 * Pro Kombination aus Amazon-Konto, Amazon-Plattform und Flatfile wird ein eigener Katalog erstellt. +
-*_Hinweis:_* Wenn Amazon eine neue Version der Flatfile veröffentlicht, muss auch ein neuer Katalog erstellt werden. Die gute Nachricht ist: Du kannst den Katalog mit der alten Flatfile-Version einfach und schnell xref:daten:marktplatz-formate-exportieren.adoc#80[kopieren und anpassen].
+*_Hinweis:_* Wenn Amazon eine neue Version der Flatfile veröffentlicht, muss auch ein neuer Katalog erstellt werden. Die gute Nachricht ist: Du kannst den Katalog mit der alten Flatfile-Version einfach und schnell xref:daten:catalogues-manage.html#190[kopieren und anpassen].
 * Merkmale und Freitextfelder können nicht über Kataloge an Amazon übertragen werden. Für Pflichtfelder einer Flatfile kannst du direkt im Assistenten des Amazon-Katalogs Eigenschaften erstellen. Weitere Eigenschaften kannst du später erstellen und verknüpfen.
 * Für Amazon Business (B2B) gibt es eine eigene Flatfile. Daher muss auch ein eigener Katalog für Amazon Business erstellt werden.
 * BMVD-Export-Kategorien werden in den Katalogen ignoriert.
