--- a/docs/de-de/modules/maerkte/partials/properties-creation.adoc
+++ b/docs/de-de/modules/maerkte/partials/properties-creation.adoc
@@ -7,7 +7,7 @@ Gehe wie im Folgenden beschrieben vor, um die Eigenschaft {property} zu erstelle
 --
 . Öffne das Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration*.
 . Klicke auf *icon:plus-square[role="darkGrey"] Eigenschaft erstellen*.
-. Nimm die Einstellungen gemäß <<#table-{market}-{property}>> vor.
+. Nimm die Einstellungen gemäß der Tabelle vor.
 . Speichere (terra:save[]) die Einstellungen. +
 → Die Eigenschaft wird erstellt.
 --
