fix errors - DE

--- a/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
@@ -66,7 +66,7 @@ Gehe wie unten beschrieben vor, um Amazon FBA in deinem plentymarkets System ein
 Amazon erweitert kontinuierlich das europäische Versandnetzwerk für Händler:innen, die Versand durch Amazon nutzen. Eine Voraussetzung ist, dass du in allen Ländern, in denen du FBA-Logistikzentren nutzt, steuerrechtlich registriert bist. Damit für diese neuen Logistikzentren deine Rechnungen auch steuerlich korrekt erstellt werden, kannst du neben deinem Firmensitz im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Buchhaltung* den Lagerstandort als Basis für den Standard-Umsatzsteuersatz wählen und das individuell für jeden deiner Mandanten. Im gleichen Menü im Tab *Umsatzsteuersätze* erfasst du auch die notwendigen Steuersätze für die Länder.
 
 * xref:auftraege:buchhaltung.adoc#_neuen_standort_anlegen[So legst du einen neuen Standort an]
-* xref:auftraege:buchhaltung.adoc#550[So gibst du Umsatzsteuersätze ein]
+* xref:auftraege:buchhaltung.adoc#320[So gibst du Umsatzsteuersätze ein]
 
 [.collapseBox]
 .*_Beispiel:_* Logistikzentrum in Polen mit Versand nach Deutschland
@@ -364,7 +364,7 @@ video::314735384[vimeo]
 [#3800]
 === Lager für Amazon Multi-Channel erstellen
 
-Lege ein Lager an, falls du noch kein Lager wie im Kapitel <<FBA-Service von Amazon nutzen, FBA-Service von Amazon nutzen>> beschrieben erstellt hast. Wichtig beim Multi-Channel-Versand ist, dass du für jeden landesspezifischen Amazon-Markt ein eigenes Lager mit dem Logistiktyp *Amazon* und das Land als Standort in plentymarkets eingerichtet hast.
+Lege ein Lager an, falls du noch kein Lager wie im Kapitel <<#60, FBA-Service von Amazon nutzen>> beschrieben erstellt hast. Wichtig beim Multi-Channel-Versand ist, dass du für jeden landesspezifischen Amazon-Markt ein eigenes Lager mit dem Logistiktyp *Amazon* und das Land als Standort in plentymarkets eingerichtet hast.
 
 [IMPORTANT]
 .Beispiel für die Übereinstimmung von Amazon-Plattform und Lagerstandort
@@ -383,7 +383,7 @@ Variantenverfügbarkeit für Amazon Multi-Channel einstellen:
 . Öffne das Menü *Artikel » Artikel bearbeiten*.
 . Öffne den Artikel.
 . Wechsele in das Tab *Multi-Channel*.
-. Nimm die Einstellungen im Bereich *Amazon* vor. Beachte dazu die Erläuterungen in <<artikelverfügbarkeit-amazon>> im Kapitel xref:maerkte:varianten-vorbereiten.adoc#700[Variantenverfügbarkeit einstellen].
+. Nimm die Einstellungen im Bereich *Amazon* vor. Beachte dazu die Erläuterungen in der Tabelle des Kapitels xref:maerkte:varianten-vorbereiten.adoc#700[Variantenverfügbarkeit einstellen].
 . Speichere (terra:save[]) die Einstellungen.
 
 [#4000]
@@ -505,7 +505,7 @@ include::_includes:partial$event-procedure.adoc[]
 |
 |===
 
-Bei Wechsel in Status 5 wird Amazon mit der Ereignisaktion darüber informiert, dass die Ware zum Versand freigegeben ist. Amazon verschickt die Ware und das plentymarkets System erhält intern eine Bestätigung von Amazon. Der Auftrag wechselt in Status 5.1, wie in den <<Auftragseinstellungen vornehmen, Auftragseinstellungen>> festgelegt. Die Paketnummer wird in dein plentymarkets System importiert.
+Bei Wechsel in Status 5 wird Amazon mit der Ereignisaktion darüber informiert, dass die Ware zum Versand freigegeben ist. Amazon verschickt die Ware und das plentymarkets System erhält intern eine Bestätigung von Amazon. Der Auftrag wechselt in Status 5.1, wie in den xref:maerkte:amazon-einrichten.adoc#600[Auftragseinstellungen] festgelegt. Die Paketnummer wird in dein plentymarkets System importiert.
 
 [TIP]
 .Import von Paketnummern
