--- a/docs/de-de/modules/maerkte/pages/twenga.adoc
+++ b/docs/de-de/modules/maerkte/pages/twenga.adoc
@@ -125,11 +125,6 @@ include::partial$catalogue-new-to-text.adoc[]
 
 include::partial$catalogue-creation.adoc[]
 
-[#filter-export]
-=== _Optional:_ Nur bestimmte Artikel exportieren
-
-include::partial$catalogue-filters.adoc[]
-
 [#data-field-mappings]
 === Datenfelder im Katalog zuordnen
 
@@ -147,6 +142,17 @@ include::partial$recommendation-text.adoc[]
 --
 include::partial$twenga-recommended-mappings.adoc[]
 --
+
+[#filter-export]
+=== _Optional:_ Nur bestimmte Artikel exportieren
+
+include::partial$catalogue-filters.adoc[]
+
+[#catalogue-settings]
+==== Katalogeinstellungen für Export vornehmen
+
+:csv-txt:
+include::partial$catalogue-settings.adoc[]
 
 [#catalogue-activation]
 ==== Katalog aktivieren
