--- a/docs/de-de/modules/glossar/partials/ausweichdatenfeld.adoc
+++ b/docs/de-de/modules/glossar/partials/ausweichdatenfeld.adoc
@@ -1,3 +1,3 @@
 [#ausweichdatenfeld]
 Ausweich-Datenfeld:: Datenfeld, das exportiert wird, wenn die zugeordneten Datenfelder nicht gefunden werden konnten oder leer sind. +
-* Weitere Informationen findest du auf der Handbuchseite xref:daten:kataloge-verwalten.adoc#80[Kataloge verwalten].
+* Weitere Informationen findest du auf der Handbuchseite xref:daten:marktplatz-formate-exportieren.html#one-to-one-fallback[Kataloge verwalten].
