--- a/docs/de-de/modules/glossar/partials/eigener-wert.adoc
+++ b/docs/de-de/modules/glossar/partials/eigener-wert.adoc
@@ -1,3 +1,3 @@
 [#eigener-wert]
-Eigener Wert:: Ermöglicht es, beim Datenaustausch einen festen Wert zu bestimmen, der importiert bzw. exportiert wird. +
-* Weitere Informationen findest du auf den Handbuchseiten xref:daten:kataloge-verwalten.adoc#80[Kataloge verwalten] und xref:daten:ElasticSync.adoc#1500[Import-Tool nutzen].
+Eigener Wert:: Ermöglicht es, beim Datenaustausch einen festen Wert für alle Datensätze zu bestimmen, der importiert bzw. exportiert wird. +
+* Weitere Informationen findest du auf den Handbuchseiten xref:daten:marktplatz-formate-exportieren.adoc#own-value[Kataloge verwalten] und xref:daten:ElasticSync.adoc#1500[Import-Tool nutzen].
