--- a/docs/de-de/modules/auftraege/pages/abonnement.adoc
+++ b/docs/de-de/modules/auftraege/pages/abonnement.adoc
@@ -531,7 +531,7 @@ Speichere (material:save[]) den Warenkorb, wenn du mit der Bearbeitung der Auftr
 [#500]
 === Artikelliste nachträglich bearbeiten
 
-Auch nach Anlegen des Abonnements kannst du die Artikelliste bearbeiten und anpassen. Dies geht solange, bis ein Durchlauf einen ersten Auftrag generiert hat. Danach ist das Abonnement gesperrt nur noch eingeschränkt bearbeitbar. Es ist möglich das Abonnement zu xref:auftraege:abonnement.adoc#_sperrung_und_entsperrung_von_abonnements[entsperren], danach kann auch die Artikelliste bearbeitet werden.
+Auch nach Anlegen des Abonnements kannst du die Artikelliste bearbeiten und anpassen. Dies geht solange, bis ein Durchlauf einen ersten Auftrag generiert hat. Danach ist das Abonnement gesperrt nur noch eingeschränkt bearbeitbar. Es ist möglich das Abonnement zu <<#850, entsperren>>. Danach kann auch die Artikelliste bearbeitet werden.
 
 [.collapseBox]
 .*Tabelle Artikelliste individualisieren*
@@ -671,6 +671,7 @@ Tabelle individualisieren:
 
 --
 
+[#850]
 [.discrete]
 ==== Sperrung und Entsperrung von Abonnements
 
