--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -154,7 +154,7 @@ Die Aktion steht für folgende Arbeitsschritte zur Verfügung:
 [.subhead]
 Einstellungen
 
-Für dieses Steuerelement sind keine zusätzlichen Einstellungen verfügbar. Allgemeine Einstellungen für Steuerelemente findest du in <<automatisierung/prozesse/aktionen#480, Tabelle 1>>. Da das Steuerelement beendet, ist die Einstellung **Ziel** für dieses Steuerelement nicht verfügbar.
+Für dieses Steuerelement sind keine zusätzlichen Einstellungen verfügbar. Allgemeine Einstellungen für Steuerelemente findest du in xref:automatisierung:aktionen.adoc#table-control-elements-general-settings[Tabelle 1]. Da das Steuerelement beendet, ist die Einstellung **Ziel** für dieses Steuerelement nicht verfügbar.
 
 [#510]
 ==== Filter
@@ -234,7 +234,7 @@ Die Aktion steht für folgende Arbeitsschritte zur Verfügung:
 [.subhead]
 Einstellungen
 
-Für dieses Steuerelement sind keine zusätzlichen Einstellungen verfügbar. Allgemeine Einstellungen für Steuerelemente findest du in <<automatisierung/prozesse/aktionen#480, Tabelle 1>>.
+Für dieses Steuerelement sind keine zusätzlichen Einstellungen verfügbar. Allgemeine Einstellungen für Steuerelemente findest du in xref:automatisierung:aktionen.adoc#table-control-elements-general-settings[Tabelle 1].
 
 [#540]
 ==== Loop
@@ -252,7 +252,7 @@ video::231661904[vimeo]
 [.subhead]
 Einstellungen
 
-Für dieses Steuerelement sind keine zusätzlichen Einstellungen verfügbar. Allgemeine Einstellungen für Steuerelemente findest du in <<automatisierung/prozesse/aktionen#480, Tabelle 1>>.
+Für dieses Steuerelement sind keine zusätzlichen Einstellungen verfügbar. Allgemeine Einstellungen für Steuerelemente findest du in xref:automatisierung:aktionen.adoc#table-control-elements-general-settings[Tabelle 1].
 
 [#550]
 ==== Split
@@ -389,7 +389,7 @@ Einstellungen
 |Einstellung |Erläuterung
 
 | **Etiketten-Vorlage**
-|xref:artikel:artikel-verwalten.adoc#760[Etiketten-Vorlage] aus der Dropdown-Liste wählen.
+|xref:artikel:barcodes.adoc#800[Etiketten-Vorlage] aus der Dropdown-Liste wählen.
 
 | **Zuordnung**
 |Zuordnung der Etiketten-Vorlage wählen. +
@@ -555,7 +555,7 @@ Einstellungen
 |Die Anzahl der gewünschten Artikeletiketten. Zur Verfügung stehen dir die Optionen **1** bis **10** sowie **Buchungsmenge**. Bei der Option **Buchungsmenge** wird die Anzahl der Waren verwendet, die in einer vorhergehenden Aktion (**Wareneingang**) innerhalb des Arbeitsschrittes eingebucht wurde.
 
 | **Etiketten-Vorlage**
-|Eine xref:artikel:artikel-verwalten.adoc#760[Etiketten-Vorlage] aus der Dropdown-Liste wählen.
+|Eine xref:artikel:barcodes.adoc#800[Etiketten-Vorlage] aus der Dropdown-Liste wählen.
 |====
 
 [.subhead]
@@ -714,7 +714,7 @@ Einstellungen
 |Bestimmen, wie die Auftragssuche funktionieren soll. +
 *Standard* = Die Suche ruft Aufträge _und_ ihre dazugehörige Retouren, Gutschriften, Lieferaufträge, usw auf. Sucht der Lagerist beispielsweise anhand einer Auftrags-ID, bekommt er als Suchergebnis sowohl den Auftrag als auch die damit verbundene Retoure. +
 *Ohne Auftragsverknüpfungen* = Die Suche ruft _nur_ exakte Treffer auf. Sucht der Lagerist beispielsweise anhand einer Auftrags-ID, bekommt er als Suchergebnis _nur_ den Auftrag. Die damit verbundene Retoure wird nicht als Suchergebnis angezeigt. +
-*Box-Suche* = Wird für die xref:automatisierung:rollende-kommissionierung.adoc[rollende Kommissionierung] verwendet. Das Lagerpersonal scannt den Barcode eines Lagerorts. Daraufhin ruft plentymarkets den entsprechenden Auftrag auf.
+*Box-Suche* = Wird für die xref:app:rollende-kommissionierung.adoc#[rollende Kommissionierung] verwendet. Das Lagerpersonal scannt den Barcode eines Lagerorts. Daraufhin ruft plentymarkets den entsprechenden Auftrag auf.
 
 2+^| *Eingabefelder*
 
@@ -897,7 +897,7 @@ Verfügbare Subaktionen für diese Aktion:
 [#600]
 ==== Exportdokument
 
-Mit der Aktion **Exportdokument** wird ein xref:fulfillment:versand-vorbereiten.adoc#2950[DHL-Exportdokument] generiert. Dieses Exportdokument kann per gewählter Subaktion automatisch gedruckt, gespeichert und/oder zwischengespeichert werden.
+Mit der Aktion **Exportdokument** wird ein DHL-Exportdokument generiert. Dieses Exportdokument kann per gewählter Subaktion automatisch gedruckt, gespeichert und/oder zwischengespeichert werden.
 
 [.subhead]
 Arbeitsschritte
@@ -940,7 +940,7 @@ Verfügbare Subaktionen für diese Aktion:
 [#230]
 ==== FiBu-Export
 
-Mit der Aktion **FiBu-Export** wird eine CSV-Datei erzeugt, die in diverse Buchhaltungssysteme importiert werden kann. Es stehen 2 Formate für diesen Export zur Auswahl, zum Einen **Ein Datensatz pro Artikelposition (Standard)** und zum Anderen **Ein Datensatz pro Rechnung und Umsatzsteuersatz**. Der xref:daten:daten-exportieren.adoc#10[FiBu-Export] wird per Subaktion gespeichert.
+Mit der Aktion **FiBu-Export** wird eine CSV-Datei erzeugt, die in diverse Buchhaltungssysteme importiert werden kann. Es stehen 2 Formate für diesen Export zur Auswahl, zum Einen **Ein Datensatz pro Artikelposition (Standard)** und zum Anderen **Ein Datensatz pro Rechnung und Umsatzsteuersatz**. Der FiBu-Export wird per Subaktion gespeichert.
 
 [.subhead]
 Arbeitsschritte
@@ -2535,7 +2535,7 @@ Einstellungen
 |Eine xref:automatisierung:drucker.adoc#10[Druckerkonfiguration] aus der Dropdown-Liste wählen.
 
 | *Etikettenvorlage*
-|Eine xref:artikel:artikel-verwalten.adoc#3300[Etikettenvorlage] aus der Dropdown-Liste wählen.
+|Eine xref:artikel:barcodes.adoc#800[Etikettenvorlage] aus der Dropdown-Liste wählen.
 
 | *Etikettenanzahl*
 | *Buchungsmenge* = So viele Etiketten werden drucken, wie eingebucht werden. +
