--- a/docs/de-de/modules/automatisierung/pages/best-practices-automatisierung.adoc
+++ b/docs/de-de/modules/automatisierung/pages/best-practices-automatisierung.adoc
@@ -247,7 +247,7 @@ Möchtest du die Rechnung nach Erzeugung des Dokuments direkt als E-Mail-Anhang 
 === Gratis-Artikel zu Aufträgen hinzufügen
 
 Möchtest du zu Aufträgen ab einem bestimmten Warenwert oder zu Werbezwecken Gratis-Artikel hinzufügen, empfehlen wir die in <<table-event-procedure-order-giveaway>> beschriebene Ereignisaktion. +
-Weitere Information zu Gratis-Artikeln findest du auch auf der Handbuchseite xref:artikel:artikel-verwalten.adoc#4300[Artikel verwalten].
+Weitere Information zu Gratis-Artikeln findest du auch auf der Handbuchseite xref:artikel:gratiszugaben.adoc#[Gratiszugaben].
 
 [.collapseBox]
 .Ereignisaktion erstellen
