--- a/docs/de-de/modules/automatisierung/pages/subaktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/subaktionen.adoc
@@ -267,7 +267,7 @@ Einstellungen
 [#195]
 === Entferne Auftrag vom Box
 
-Die Subaktion **Entferne Auftrag vom Box** wird für die xref:automatisierung:rollende-kommissionierung.adoc[rollende Kommissionierung] verwendet. Mit dieser Subaktion löst du die Verbindung zwischen Auftrag und Box. Somit steht die Box wieder frei zur Verfügung und kann beim nächsten Durchlauf wiederverwendet werden.
+Die Subaktion **Entferne Auftrag vom Box** wird für die xref:app:rollende-kommissionierung.adoc#[rollende Kommissionierung] verwendet. Mit dieser Subaktion löst du die Verbindung zwischen Auftrag und Box. Somit steht die Box wieder frei zur Verfügung und kann beim nächsten Durchlauf wiederverwendet werden.
 
 [.subhead]
 Aktionen
