--- a/docs/en-gb/modules/automation/pages/best-practices-automation.adoc
+++ b/docs/en-gb/modules/automation/pages/best-practices-automation.adoc
@@ -247,7 +247,7 @@ If you want to send the invoice to your customers as a PDF attached to an email 
 === Adding give-aways to orders
 
 If you wish to add give-aways in the form of free items to orders exceeding a certain value of items, we recommend the event procedure described in <<table-event-procedure-order-giveaway>>. +
-For more information on give-aways, refer to the xref:item:managing-items.adoc#4300[Manually creating items] page of the manual.
+For more information on give-aways, refer to the xref:item:new-item.adoc#[Manually creating items] page of the manual.
 
 [.collapseBox]
 .Creating an event procedure
