--- a/docs/en-gb/modules/automation/pages/processes.adoc
+++ b/docs/en-gb/modules/automation/pages/processes.adoc
@@ -17,7 +17,7 @@ Go to *Setup » Processes » New process* to set up a new process. Refer to the 
 
 You can access and run the processes you have already set up any time. Click on *Processes* in the upper menu bar of the plentymarkets back end to do so. The manual page on xref:automation:carrying-out-processes.adoc#[running processes] describes the necessary steps to run processes.
 
-You prefer watching the setup process in videos that are easy to follow? No problem! We have listed some useful video tutorials in our xref:automatisierung:best-practices.adoc#[practical examples] (German only). Also note our link:https://www.youtube.com/watch?v=p5NF6rLr7ho[Deep Dive^] (from 03:52:00, German only). It shows you how to set up several processes for your shipping and fulfillment procedures. Refer to our link:https://forum.plentymarkets.com/t/plentymarkets-deep-dive-beispiel-prozesse/584693[forum^] to download the sample processes shown in the video (German only).
+Also note our link:https://www.youtube.com/watch?v=p5NF6rLr7ho[Deep Dive^] (from 03:52:00, German only). It shows you how to set up several processes for your shipping and fulfillment procedures. Refer to our link:https://forum.plentymarkets.com/t/plentymarkets-deep-dive-beispiel-prozesse/584693[forum^] to download the sample processes shown in the video (German only).
 
 
 [#300]
@@ -32,4 +32,4 @@ Processes provide you with a variety of different settings and options. These ar
 [#400]
 == Do you need help?
 
-Just like the workflows within your business, processes and their functions can be quite complex. On xref:automatisierung:FAQ.adoc[this manual page], you can find a list of the most common errors as well as tips on how to deal with them (German only). In case of further questions or problems, we are always happy to assist you in our link:https://forum.plentymarkets.com/c/prozesse[forum category^].
+Just like the workflows within your business, processes and their functions can be quite complex. On xref:automation:faq.adoc#[this manual page], you can find a list of the most common errors as well as tips on how to deal with them. In case of further questions or problems, we are always happy to assist you in our link:https://forum.plentymarkets.com/c/prozesse[forum category^].
