--- a/docs/en-gb/modules/orders/pages/generating-packing-list.adoc
+++ b/docs/en-gb/modules/orders/pages/generating-packing-list.adoc
@@ -72,7 +72,7 @@ Information texts for specific orders are saved in the *Orders » Edit orders »
 |Determine how the external variation ID, e.g. as assigned by your supplier, is displayed on the packing list.
 
 | *Order properties*
-|Determine how the order properties are displayed on the packing list. For further information on managing properties in general and order properties, refer to the *xref:en:managing-items.adoc#480[Managing properties]* page of the manual.
+|Determine how the order properties are displayed on the packing list. For further information on managing properties in general and order properties, refer to the xref:item:personalised-items.adoc#95[Managing properties] page of the manual.
 
 | *Storage location*
 |Determine how the *Storage location name* is displayed on the packing list. Choose between displaying the storage location name only and different combinations of warehouse information, such as *Warehouse/storage location name*.
