--- a/docs/en-gb/modules/orders/pages/accounting.adoc
+++ b/docs/en-gb/modules/orders/pages/accounting.adoc
@@ -394,7 +394,7 @@ In case there is no taric code entered in the variation or in the table, no diff
 In order to import taric codes you can use either the import tool or enter them manually. We recommend to the import tool and to enter only single taric codes or carry out small adaptations manually.
 _Note_ that only numbers up to 14 characters are allowed. Entering special or blank characters is not allowed.
 
-The xref:data:elasticSync-assignment-taric.adoc[sync types] for importing taric codes can be found under Assignment taric codes . You can find general information about imports via the import tool on the manual page xref:data:ElasticSync.adoc[Using the import tool].
+The xref:data:elasticSync-assignment-taric-code.adoc#[sync types] for importing taric codes can be found under Assignment taric codes. You can find general information about imports via the import tool on the manual page xref:data:ElasticSync.adoc[Using the import tool].
 
 To fill the table manually, proceed as follows.
 
@@ -595,7 +595,7 @@ Go to *Data » Custom export* and select the data format that you want to export
 *_Tip:_* Use a software for the CSV import that allows you to select these parameters before importing the file.
 
 | *Manufacturer commissions*
-| The exported CSV file contains commissions that are saved in the xref:main@manual:item:import-export-create-directory.adoc#560[manufacturer data].
+| The exported CSV file contains commissions that are saved in the xref:item:manufacturers.adoc#100[manufacturer data].
 
 | *Price list*
 | The exported CSV file contains item data and the corresponding prices.
