--- a/docs/en-gb/modules/orders/pages/generating-pick-list.adoc
+++ b/docs/en-gb/modules/orders/pages/generating-pick-list.adoc
@@ -21,7 +21,7 @@ Displaying item data:
 . Carry out the settings as desired. Pay attention to the information provided in <<table-orders-options-pick-list>>.
 . *Save* (icon:plus-square[role="green"]) the settings.
 
-[[table-options-pick-list]]
+[[table-orders-options-pick-list]]
 .Options in the *Pick list* menu
 [cols="1,3"]
 |====
@@ -34,7 +34,7 @@ Displaying item data:
 |Select a character set used for coding the pick list.
 
 | *ID barcode*
-|Displays the order ID as a barcode. Determine with the help of the variables *X* and *Y* at which position the *ID barcode* is displayed. If you enter the value 0 for both variables, the *ID barcode* is displayed in the upper left corner of the pick list. For further information on positioning elements by assigning coordinates, refer to the respective xref:orders:order-documents.adoc#50[manual page].
+|Displays the order ID as a barcode. Determine with the help of the variables *X* and *Y* at which position the *ID barcode* is displayed. If you enter the value 0 for both variables, the *ID barcode* is displayed in the upper left corner of the pick list. For further information on positioning elements by assigning coordinates, refer to the respective xref:orders:order-documents.adoc#600[manual page].
 
 | *Quantity*
 |Determine how the item quantity is displayed on the pick list.
@@ -122,7 +122,7 @@ Uploading a PDF template:
 
 [TIP]
 ====
-You should place a header above the actual pick list if your template contains a header. Make sure that top margin is wide enough for your header and adjust the value if necessary (see <<table-options-pick-list>>).
+You should place a header above the actual pick list if your template contains a header. Make sure that top margin is wide enough for your header and adjust the value if necessary (see <<table-orders-options-pick-list>>).
 ====
 
 [#300]
