--- a/docs/de-de/modules/auftraege/pages/mahnungen-erzeugen.adoc
+++ b/docs/de-de/modules/auftraege/pages/mahnungen-erzeugen.adoc
@@ -48,7 +48,7 @@ Einzelne Mahnung erzeugen:
 
 | [#intable-dunning-charge]*Varianten-ID*
 |Eine *Mahngebühr* musst du als eigenständigen Artikel mit einem Preis anlegen. Dieser Artikel wird dann als separater Posten auf der Mahnung angezeigt und gibt die Mahngebühr aus. Wenn du den Artikel angelegt hast, kannst du die entsprechende ID der Hauptvariante hier eintragen. Diese wird dann automatisch allen generierten Mahnungen hinzugefügt. +
-Mehr Informationen und Anleitungen zum Erstellen von Artikeln findest du auf der Handbuchseite xref:artikel:artikel-verwalten.adoc#20[Artikel verwalten].
+Mehr Informationen und Anleitungen zum Erstellen von Artikeln findest du auf der Handbuchseite xref:artikel:neue-artikel.adoc#[Artikel manuell anlegen].
 
 | *Kommentar*
 |Einen Text eingeben, der auf der Mahnung unterhalb der Artikelpositionen angezeigt wird. Die Eingabe ist optional.
@@ -104,7 +104,7 @@ Der Statuswechsel ist wichtig, damit für bereits bearbeitete Aufträge ein Proz
 
 | *Varianten-ID* (Aktion)
 |Eine *Mahngebühr* musst du als eigenständigen Artikel mit einem Preis anlegen. Dieser Artikel wird dann als separater Posten auf der Mahnung angeziegt und gibt die Mahngebühr aus. Wenn du den Artikel angelegt hast, kannst du die ID der Hauptvariante des Artikels hier eintragen. Diese wird dann automatisch allen generierten Mahnungen hinzugefügt. +
-Mehr Informationen und Anleitungen zum Erstellen von Artikeln findest du auf der Handbuchseite xref:artikel:artikel-verwalten.adoc#20[Artikel verwalten].
+Mehr Informationen und Anleitungen zum Erstellen von Artikeln findest du auf der Handbuchseite xref:artikel:neue-artikel.adoc#[Artikel manuell anlegen].
 
 | *Kommentar*
 |Einen Text eingeben, der auf allen Mahnungen unterhalb der Artikelpositionen angezeigt wird. Die Eingabe ist optional.
