--- a/docs/de-de/modules/crm/pages/praxisbeispiel-tracking-url-senden.adoc
+++ b/docs/de-de/modules/crm/pages/praxisbeispiel-tracking-url-senden.adoc
@@ -86,7 +86,7 @@ Erstelle die E-Mail-Vorlage im Menü *Einrichtung » Mandant » [Mandant wählen
 
 Richte nun eine Ereignisaktion ein, die den Versand der E-Mail-Vorlage für die Paketverfolgung auslöst, sobald die Paketnummer am Auftrag verfügbar ist.
 
-[instruction]
+[.instruction]
 Ereignisaktion einrichten:
 
 . Öffne das Menü *Einrichtung » Aufträge » Ereignisse*.
