--- a/docs/en-gb/modules/crm/pages/practical-example-send-tracking-url.adoc
+++ b/docs/en-gb/modules/crm/pages/practical-example-send-tracking-url.adoc
@@ -86,7 +86,7 @@ Create the email template in the *Setup » Client » [Select client] » Email »
 
 Now set up an event procedure that triggers the email template despatch for the package tracking once the package number is available at the order.
 
-[instruction]
+[.instruction]
 Setting up an event procedure:
 
 . Go to *Setup » Orders » Events*.
