fix broken anchors

--- a/docs/en-gb/modules/crm/pages/quick-search.adoc
+++ b/docs/en-gb/modules/crm/pages/quick-search.adoc
@@ -36,7 +36,7 @@ Searching a data record in the quick search:
 * *_Alternative 1:_* Click on material:search[] (*Search*) to get a list of all data records.
 * *_Alternative 2:_* Enter a value in the search field and select the appropriate filter from the suggestion list. *_Example:_* If you enter a number, the possible filters with this ID will be suggested such as for example the contact ID.
 * *_Option 3:_* Click on material:tune[] to narrow down the search results with filters.
-. Note the explanations about the filters in <<#table-search-contact>>.  +
+. Note the explanations about the filters in <<#table-filter-quick-search>>.  +
 *_Tip:_* You can enter multiple search terms into the search fields at one time. This makes your search run quicker and be more accurate.
 . Click on material:search[] *Search*. +
 → The data records that correspond to the search criteria entered are shown in the overview. <<#table-settings-quick-search>> explains further setting options in the data record.
@@ -238,7 +238,7 @@ Converting a plentyShop and marketplace guest order into a contact data record:
 * *_Alternative 1:_* Click on material:search[] (*Search*) to get a list of all data records.
 * *_Alternative 2:_* Enter a value in the search field and select the appropriate filter from the suggestion list.
 * *_Option 3:_* Click on material:tune[] to narrow down the search results with filters.
-. Note the explanations about the filters in <<#table-search-contact>>.  +
+. Note the explanations about the filters in <<#table-filter-quick-search>>.  +
 *_Tip:_* You can enter multiple search terms into the search fields at one time. This makes your search run quicker and be more accurate.
 . Click on material:search[] *Search*. +
 → The data records that correspond to the search criteria entered are shown in the overview.
@@ -273,7 +273,7 @@ Downloading all data of a contact or guest order:
 * *_Alternative 1:_* Click on material:search[] (*Search*) to get a list of all data records.
 * *_Alternative 2:_* Enter a value in the search field and select the appropriate filter from the suggestion list.
 * *_Option 3:_* Click on material:tune[] to narrow down the search results with filters.
-. Note the explanations about the filters in <<#table-search-contact>>.  +
+. Note the explanations about the filters in <<#table-filter-quick-search>>.  +
 *_Tip:_* You can enter multiple search terms into the search fields at one time. This makes your search run quicker and be more accurate.
 . Click on material:search[] *Search*. +
 → The data records that correspond to the search criteria entered are shown in the overview.
