--- a/docs/de-de/modules/changelog/pages/2022-08-03.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-08-03.adoc
@@ -6,7 +6,7 @@
 :startWeekDate: 28. Juli 2022
 :endWeekDate: 3. August 2022
 
-// Ab diesem Eintrag weitermachen: LINK EINFÜGEN
+// Ab diesem Eintrag weitermachen: https://forum.plentymarkets.com/t/nachbestellung-filter-fuer-das-lieferdatum-hinzugefuegt-purchase-order-added-filter-for-delivery-date/690039
 
 Erfahre, was sich in der Woche vom {startWeekDate} bis zum {endWeekDate} bei plentymarkets getan hat. Im Folgenden findest du alle Changelog-Einträge der letzten Woche für stable- und early-Systeme.
 
@@ -45,6 +45,36 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlich
 Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
 [discrete]
+=== Amazon
+
+* Im Menü *Einrichtung » Märkte » Amazon » Einstellungen » [Amazon-Konto öffnen] » Tab: Einstellungen* wurde die Schaltfläche *Zugriff erlauben* hinzugefügt.
++
+Wenn du im Menü *Einrichtung » Märkte » Amazon » Einstellungen* ein neues Amazon-Konto hinzufügen möchtest, musst du plentymarkets Zugriff auf dein Amazon-Konto gewähren, damit Daten zwischen Amazon und plentymarkets ausgetauscht werden können. Klicke dazu auf *Zugriff erlauben*. Du wirst zu Amazon weitergeleitet und musst dort bestätigen, dass plentymarkets auf dein Amazon-Konto zugreifen darf.
++
+[NOTE]
+.Kein To-Do bei bestehenden Konten
+======
+Diese Einstellung ist nur für die Einrichtung neuer Amazon-Konten relevant. Bei bestehenden Amazon-Konten musst du also nichts weiter tun.
+
+Weitere Informationen zur Einrichtung neuer Amazon-Konten in plentymarkets findest du auf der Handbuchseite xref:maerkte:amazon-einrichten.adoc#300[Amazon einrichten].
+
+*_Tipp_*: Du kannst auch den Assistenten *Amazon - Grundeinstellungen* im Menü *Einrichtung » Assistenten » Omni-Channel* verwenden, um neue Konten für Amazon hinzuzufügen.
+======
+
+[discrete]
+=== CRM
+
+* Bisher musste im Menü *CRM » Schnellsuche* immer mindestens ein Filter gesetzt werden, bevor man die Suche ausführen konnte. Dieses Verhalten wurde geändert. Die Wahl eines Filters ist nun nicht mehr nötig, um die Suche auszuführen.
+
+[discrete]
+=== OTTO
+
+:otto-master-date: 29.07.2022
+:otto-master-link: https://forum.plentymarkets.com/uploads/short-url/Arxhkn54pjYR8o8WGZRQ26ZHzkV.xlsx
+
+include::partial$otto-master-file.adoc[]
+
+[discrete]
 === Plugins
 
 * Die Funktion *Plugin-Set löschen* in der Plugin-Set-Übersicht befindet sich jetzt in dem Dreipunktmenü.
@@ -65,6 +95,17 @@ Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 ** Auftrags-UI: Bei einer Bestelleigenschaft konnte der Preis von 0 nicht gespeichert werden.
 ** Auftrags-UI: Beim Ändern des Preises bei einer Bestelleigenschaft wurden die Auftragssummen teilweise nicht neu berechnet.
 ** Email-Template: Bei Artikelpaketen wurden die Bestelleigenschaften nicht dargestellt.
+
+[discrete]
+=== Elastischer Export
+
+* Der elastische Export von Kontaktdaten mit dem Formattyp *Kontakte* hat nicht korrekt funktioniert. Es ist ein interner Serverfehler aufgetreten. Dieses Verhalten wurde behoben.
++
+[IMPORTANT]
+.To-Do
+======
+Version v1.3.8 oder höher muss für das Format Designer-Plugin installiert sein.
+======
 
 [discrete]
 === Import
@@ -94,7 +135,18 @@ early::
 
 Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
+[discrete]
+=== CRM
 
+* Der Fehler bei der E-Mail-Vorschau in den Nachbestellungen mit alten Vorlagen wurde korrigiert.
+* Der Fehler beim Speichern von Kontaktoptionen wie E-Mailadressen oder Telefonnummer in der alten Kontakt-UI wurde korrigiert.
+
+[discrete]
+=== eBay
+
+* Im Menü *Einrichtung » Märkte » eBay » Einstellungen » Tab: Kontoeinstellungen* wurde die Einstellung *Auftragsstatus für Aufträge mit fehlgeschlagener Rückerstattung* hinzugefügt.
++
+*_Hintergrund_*: Mit der Ereignisaktion *eBay-Rückerstattung veranlassen* führst du eine Rückerstattung für einen Auftrag durch. Mit der Einstellung *Auftragsstatus für Aufträge mit fehlgeschlagener Rückerstattung* legst du fest, in welchen Status Aufträge geschoben werden sollen, wenn diese Ereignisaktion nicht ausgeführt werden konnte.
 
 '''
 
@@ -103,7 +155,10 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlich
 
 Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
+[discrete]
+=== plentyBI
 
+* Das Element *Globales Zeitintervall* kann künftig nicht mehr als separates Element zum Dashboard hinzugefügt werden. Die Funktionalität wurde stattdessen vollständig in das Element *Globale Filter* überführt. Um das globale Zeitintervall zu verändern und die Daten auf dem Dashboard entsprechend filtern, muss von nun an das Element *Globale Filter* auf dem Dashboard platziert und eingerichtet werden. Die notwendigen Einstellungen sind auf der Handbuchseite xref:business-entscheidungen:myview-dashboard.adoc#850[Dashboard] beschrieben.
 
 '''
 
@@ -112,7 +167,35 @@ Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlic
 
 Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
+[discrete]
+=== CRM
 
+* Der dynamische Anhang *Voucher* im EmailBuilder wurde nicht an die E-Mail-Vorlage angehangen, wenn ein Gutschein gekauft wurde. Dieses Verhalten wurde behoben.
+* n einigen Systemen konnten E-Mail-Vorlagen aus dem Mail-Tab des Auftrags heraus nicht gesendet werden. Auch das Öffnen der Vorlagenvorschau in diesem Bereich hat nicht immer funktioniert. Dieses Verhalten wurde behoben.
+* Wenn man im Kontaktdatensatz im Menü *CRM » Kontakte* eine Adresse eingegeben hat, ohne diese zu speichern, und dann ein anderes Menü, beispielsweise den Auftrag geöffnet hat, waren die bereits eingegebenen Daten der Adresse beim Klick zurück in den Kontaktdatensatz nicht mehr vorhanden. Dieses Verhalten wurde behoben.
+
+[discrete]
+=== Spezialexport
+
+* Beim Spezialexport *Finanzbuchhaltung* wird der Preis der letzten Position eines Auftrags so angepasst, dass die Summe der Preise der Positionen der Rechnungssumme entspricht. Dies hatte nicht in allen Fällen funktioniert und wurde jetzt angepasst.
+
+'''
+
+[discrete]
+== Gelöscht
+
+Folgende Funktionalität wurde in den letzten 7 Tagen auf *{version}* entfernt.
+
+[discrete]
+=== plentyBI
+
+* Das Element *Einfaches Säulendiagramm* wird aus dem plentyBI Dashboard entfernt und ist somit nicht mehr verwendbar. Alternativ kann der Diagrammtyp xref:business-entscheidungen:myview-dashboard.adoc#720[Säulendiagramm] genutzt werden.
++
+[NOTE]
+.Kein To-Do
+======
+Hast du bereits ein einfaches Säulendiagramm auf deinem Dashboard eingerichtet und verwendet, musst du nichts weiter tun. Die Daten werden automatisch in ein neues Diagramm vom Typ Säulendiagramm überführt und wie gewohnt angezeigt. Deine vorherigen Einstellungen bleiben dabei unverändert und keine Daten gehen verloren. Zudem gehen durch den Wechsel zum regulären Säulendiagramm keine Einstellungsmöglichkeiten verloren, sodass dir alle gewohnten Funktionalitäten im gleichen Umfang erhalten bleiben.
+======
 
 --
 
@@ -126,9 +209,85 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|
-|
-|
+|link:https://marketplace.plentymarkets.com/proslider_55225[18BITS PRO SLIDER^]
+|1.0.1
+|-
+
+|link:https://marketplace.plentymarkets.com/conradextension_6948[Conrad^]
+|1.2.0
+|-
+
+|link:https://marketplace.plentymarkets.com/dynamicrepricing_6904[emarketing Dynamic Repricing^]
+|1.0.2
+|-
+
+|link:https://marketplace.plentymarkets.com/etsy_4689[Etsy^]
+|2.1.22
+|-
+
+|link:https://marketplace.plentymarkets.com/feed4ceres_6097[Feed4Ceres^]
+|4.1.0
+|-
+
+|link:https://marketplace.plentymarkets.com/formatdesigner_6483[FormatDesigner^]
+|1.3.8
+|-
+
+|link:https://marketplace.plentymarkets.com/galaxus_4788[Galaxus.ch^]
+|1.13.1
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportidealode_4723[idealo.de^]
+|3.3.37
+|-
+
+|link:https://marketplace.plentymarkets.com/listinglayoutconfigurator_6867[Layout Konfigurator^]
+|1.1.6
+|-
+
+|link:https://marketplace.plentymarkets.com/metro_6600[Metro^]
+|2.2.4
+|-
+
+|link:https://marketplace.plentymarkets.com/mirakl_6917[Mirakl Connector^]
+|1.2.0
+|-
+
+|link:https://marketplace.plentymarkets.com/mollie_6272[Mollie^]
+|2.8.14
+|-
+
+|link:https://marketplace.plentymarkets.com/mytoys_54776[MyToys^]
+|1.0.35
+|-
+
+|link:https://marketplace.plentymarkets.com/sendinblue_6924[Sendinblue^]
+|1.0.6
+|-
+
+|link:https://marketplace.plentymarkets.com/schufa_6360[Schufa Bonitätsprüfung^]
+|2.1.9
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourstorespecialswidget_6363[Shopaktionen Widget^]
+|1.0.12
+|-
+
+|link:https://marketplace.plentymarkets.com/voelknerextension_6949[Voelkner^]
+|1.2.0
+|-
+
+|link:https://marketplace.plentymarkets.com/wayfair_6273[Wayfair^]
+|1.2.5
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourwidgetswundertuete_5993[Widget Collection^]
+|1.1.3
+|-
+
+|link:https://marketplace.plentymarkets.com/woocommerce_5102[woocommerce.com^]
+|3.0.7
+|-
 
 |===
 
