FIX meaning of sentence

--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -1803,7 +1803,7 @@ Wenn du die Bestandsbeschränkung und diesen Status bei fehlendem Bestand nutzt,
 |Empfohlen, um zu kennzeichnen, dass Aufträge zum Picken und Packen an das Lager übertragen wurden. Mithilfe von Ereignisaktionen oder Prozessen lässt sich hier eine Automatisierung erreichen.
 
 | *[7]* Warenausgang gebucht
-|Wird automatisch zugeordnet, wenn der Warenausgang in einem Auftrag gebucht wurde. Das manuelle Setzen des Status sorgt wiederum nicht dafür, dass der Warenausgang tatsächlich gebucht und der Bestand reduziert wird. Deshalb sollte dieser Status nicht manuell, per Ereignisaktion oder Prozess gesetzt werden.
+|Wird automatisch zugeordnet, wenn der Warenausgang in einem Auftrag gebucht wurde. Das manuelle Setzen des Status sorgt wiederum nicht dafür, dass der Warenausgang tatsächlich gebucht und der Bestand reduziert wird. Deshalb sollte dieser Status nicht manuell, sondern per Ereignisaktion oder Prozess gesetzt werden.
 
 | *[7.1]* Auftrag exportiert
 |Steht zur freien Verfügung. Möglicher Anwendungsfall ist das Setzen des Status, nachdem Aufträge zur Auswertung exportiert wurden.
